--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
+
+
 {
   "manifest_version": "1",
   "type": "WebApp",
   "meta": {
-    "name": "Rainbow Six Siege Game Events Consumer Sample",
+    "name": "Rainbow Six Siege Live Game Feed",
     "version": "0.0.1",
     "minimum-overwolf-version": "0.120.1.0",
-    "author": "Overwolf",
+    "author": "Dakpan",
     "icon": "icon.png",
     "icon_gray": "icon_gray.png",
-    "description": "Game Events Consumer Sample"
+    "description": "Live Game Feed"
   },
   "data": {
     "game_targeting": {
